<resources>
    <string name="app_name">ExamenPem</string>
    <string name="age_label">Age:</string>
    <string name="phone_label">Phone:</string>
    <string name="name_label">Name:</string>
    <string name="surname_label">Surname:</string>
    <string name="job_label">Job:</string>
    <string name="cv_label">CV:</string>
    <string name="cancel_button_label">Cancel</string>
    <string name="add_button_label">Add</string>
    <string name="dni_label">DNI:</string>
    <string name="delete_button_label">delete</string>
    <string name="edit_button_label">Edit</string>
    <string name="addImage">Add Image</string>
    <string name="valoracion_label">Valoracion:</string>

</resources>
