<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".Add.AddActivity">

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button_label" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_button_label" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/addImage" />

    <ImageView
        android:id="@+id/addImage"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="25dp"
        android:layout_weight="1"
        android:textAlignment="center"
        app:srcCompat="@drawable/ic_image_black_24dp" />

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_label"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/nameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/surnameLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/surname_label"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/surnameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/dniLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dni_label"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/dniText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/ageLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/age_label"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/ageText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/jobLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/job_label"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/jobText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/cvLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cv_label"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/cvText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

</LinearLayout>